# multi.slam-auv

./: .cursorrules  .gitignore  LICENSE  README.md  dependencies.repos
.github/workflows/: ci.yml
docker/: Dockerfile  devcontainer.json  entrypoint.sh
docs/: BUILD_STATUS.md  RUNBOOK.md
src/auv_bringup/: CMakeLists.txt  INTERFACE.md  README.md  package.xml
src/auv_bringup/config/: global_params.yaml
src/auv_bringup/launch/: bringup.launch.py  full_fusion.launch.py  sonar_only.launch.py  visual_only.launch.py
src/auv_bringup/rviz/: auv.rviz
src/auv_control/: README.md  package.xml  setup.py
src/auv_control/auv_control/: thruster_allocator.py
src/auv_control/config/: allocation.yaml
src/auv_control/launch/: control.launch.py  teleop.launch.py
src/auv_control/test/: test_allocation.py
src/auv_description/: CMakeLists.txt  README.md  package.xml
src/auv_description/config/: description.rviz
src/auv_description/launch/: description.launch.py
src/auv_description/meshes/: README.md
src/auv_description/urdf/: bluerov2.gazebo.xacro  bluerov2.urdf.xacro  common.xacro  sensors.xacro  thrusters.xacro
src/auv_drivers/: README.md  package.xml  setup.py
src/auv_drivers/auv_drivers/: driver_contract.py  driver_stub.py
src/auv_evaluation/: README.md  package.xml  setup.cfg  setup.py
src/auv_evaluation/auv_evaluation/: ate.py  run_evo.py  trajectory_logger.py
src/auv_evaluation/launch/: evaluate.launch.py
src/auv_evaluation/scripts/: regression_test.sh
src/auv_evaluation/test/: test_ate.py
src/auv_interfaces/: CMakeLists.txt  README.md  package.xml
src/auv_interfaces/action/: RunTrajectory.action
src/auv_interfaces/msg/: DVL.msg  LoopClosure.msg  SlamStatus.msg  USBLFix.msg
src/auv_interfaces/srv/: SaveMap.srv  TriggerLoopSearch.srv
src/auv_localization/auv_dead_reckoning/: README.md  package.xml  setup.cfg  setup.py
src/auv_localization/auv_dead_reckoning/auv_dead_reckoning/: dead_reckoning_node.py  integrator.py
src/auv_localization/auv_dead_reckoning/launch/: dead_reckoning.launch.py
src/auv_localization/auv_dead_reckoning/test/: test_integrator.py
src/auv_localization/auv_state_estimation/: README.md  package.xml  setup.py
src/auv_localization/auv_state_estimation/auv_state_estimation/: dvl_to_twist.py
src/auv_localization/auv_state_estimation/config/: ekf.yaml
src/auv_localization/auv_state_estimation/launch/: estimation.launch.py
src/auv_mapping/: README.md  package.xml  setup.cfg  setup.py
src/auv_mapping/auv_mapping/: mapping_node.py
src/auv_mapping/launch/: mapping.launch.py
src/auv_sim/auv_sim_common/: README.md  package.xml  setup.cfg  setup.py
src/auv_sim/auv_sim_common/auv_sim_common/: conversions.py  depth_from_pressure.py  ground_truth_republisher.py  sim_dvl.py  sim_usbl.py
src/auv_sim/auv_sim_common/launch/: sim_common.launch.py
src/auv_sim/auv_sim_common/test/: test_conversions.py
src/auv_sim/auv_sim_gazebo/: CMakeLists.txt  README.md  package.xml
src/auv_sim/auv_sim_gazebo/config/: bridge.yaml
src/auv_sim/auv_sim_gazebo/launch/: sim_gazebo.launch.py
src/auv_sim/auv_sim_gazebo/models/: README.md
src/auv_sim/auv_sim_gazebo/scripts/: build_ros_gz_harmonic.sh  spawn_harmonic.py
src/auv_sim/auv_sim_gazebo/worlds/: ocean.sdf
src/auv_sim/auv_sim_stonefish/: CMakeLists.txt  README.md  package.xml
src/auv_sim/auv_sim_stonefish/launch/: sim_stonefish.launch.py
src/auv_sim/auv_sim_stonefish/scenarios/: bluerov2.scn
src/auv_sim/auv_sim_stonefish/scripts/: build_stonefish.sh
src/auv_slam/auv_image_enhancement/: README.md  package.xml  setup.cfg  setup.py
src/auv_slam/auv_image_enhancement/auv_image_enhancement/: enhance.py  image_enhancer.py
src/auv_slam/auv_image_enhancement/config/: enhancement.yaml
src/auv_slam/auv_image_enhancement/launch/: image_enhancement.launch.py
src/auv_slam/auv_image_enhancement/test/: test_enhance.py
src/auv_slam/auv_place_recognition/: README.md  package.xml  setup.cfg  setup.py
src/auv_slam/auv_place_recognition/auv_place_recognition/: descriptors.py  place_recognition_node.py
src/auv_slam/auv_place_recognition/launch/: place_recognition.launch.py
src/auv_slam/auv_place_recognition/test/: test_descriptors.py
src/auv_slam/auv_slam_core/: README.md  package.xml  setup.cfg  setup.py
src/auv_slam/auv_slam_core/auv_slam_core/: graph_backend.py  slam_core_node.py
src/auv_slam/auv_slam_core/config/: slam_core.yaml
src/auv_slam/auv_slam_core/launch/: slam_core.launch.py
src/auv_slam/auv_slam_core/test/: test_graph_backend.py
src/auv_slam/auv_sonar_slam/: README.md  package.xml  setup.cfg  setup.py
src/auv_slam/auv_sonar_slam/auv_sonar_slam/: cfar.py  fls_feature_node.py  icp.py  mbes_submap_node.py
src/auv_slam/auv_sonar_slam/launch/: sonar_slam.launch.py
src/auv_slam/auv_sonar_slam/test/: test_icp_cfar.py
src/auv_slam/auv_visual_slam/: README.md  package.xml  setup.cfg  setup.py
src/auv_slam/auv_visual_slam/auv_visual_slam/: visual_slam_adapter.py
src/auv_slam/auv_visual_slam/launch/: visual_slam.launch.py
to-ignore/: AGENTS.md  AUV_MultiSLAM_ROS2_Cursor_Build_Spec.md
