<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auv_bringup</name>
  <version>0.1.0</version>
  <description>
    Top-level orchestration: composable launch, presets, global params, RViz config,
    and the frozen INTERFACE.md (spec §13, M11).
  </description>
  <maintainer email="dev@example.com">AUV SLAM contributors</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>auv_sim_gazebo</exec_depend>
  <exec_depend>auv_sim_stonefish</exec_depend>
  <exec_depend>auv_state_estimation</exec_depend>
  <exec_depend>auv_visual_slam</exec_depend>
  <exec_depend>auv_sonar_slam</exec_depend>
  <exec_depend>auv_place_recognition</exec_depend>
  <exec_depend>auv_slam_core</exec_depend>
  <exec_depend>auv_mapping</exec_depend>
  <exec_depend>auv_evaluation</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
