<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auv_drivers</name>
  <version>0.1.0</version>
  <description>
    Real-hardware driver contract stubs (spec §9.3). v1 is interfaces only: real drivers
    publish the same contract topics the simulators do, so sim->real is a launch swap.
  </description>
  <maintainer email="dev@example.com">AUV SLAM contributors</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>auv_interfaces</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
