<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auv_visual_slam</name>
  <version>0.1.0</version>
  <description>
    Visual / visual-inertial SLAM wrappers + constraint adapter (spec §10.2).
    ORB-SLAM3 (vendored) and RTAB-Map backends; the adapter emits keyframe constraints
    and loop closures into auv_slam_core.
  </description>
  <maintainer email="dev@example.com">AUV SLAM contributors</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>auv_interfaces</exec_depend>
  <exec_depend>auv_image_enhancement</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
